--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,18 @@
-h1 {
-    color: red;
+@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@400;600;700&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Mulish", sans-serif;
 }
+
+input, button {
+    width: 500px;
+    height: 50px;
+    margin-bottom: 10px;
+    padding: 10px;
+}
+
+
+
