--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,13 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Mulish", sans-serif;
+    text-align: center;
+}
+
+h1 {
+    font-weight: 700;
+    color: #04146c;
+    font-size: 24px;
 }
 
 input, button {
@@ -14,5 +21,37 @@ input, button {
     padding: 10px;
 }
 
+input {
+    color: #414166;
+    font-weight: 400;
+    font-size: 18.66px;
+}
 
+button {
+    background-color: #0a2ff1;
+    font-weight: 600;
+    color: white;
+    font-size: 20px;
+}
+
+div {
+    width: 100%;
+    height: 2px;
+    background-color: gray;
+}
+
+aside{
+    margin-top: 20px;
+    font-size: 18.66px;
+    font-weight: 400;
+    color: #0a2ff1;
+}
+
+fieldset {
+    margin-top: 200px;
+    margin-left: 650px;
+    border-color: #ccccff;
+    width: 25%;
+    padding: 20px;
+}
 
